cmake_minimum_required(VERSION 3.0.2)
project(map)

###############################################################################
# ❶ 编译选项
###############################################################################
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

###############################################################################
# ❷ catkin 依赖
###############################################################################
find_package(catkin REQUIRED COMPONENTS
  roscpp
  sensor_msgs
  std_msgs
  geometry_msgs          # 若后续不用可删除
)

###############################################################################
# ❸ SFML（三大组件）
###############################################################################
find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)

###############################################################################
# ❹ catkin 包导出
###############################################################################
catkin_package(
  CATKIN_DEPENDS roscpp sensor_msgs std_msgs geometry_msgs
)

###############################################################################
# ❺ 头文件搜索路径
###############################################################################
include_directories(
  include
  ${catkin_INCLUDE_DIRS}
  ${SFML_INCLUDE_DIRS}
)

###############################################################################
# ❻ 可执行节点
###############################################################################
add_executable(map_node src/map.cpp)

target_link_libraries(map_node
  ${catkin_LIBRARIES}
  sfml-graphics
  sfml-window
  sfml-system
  pthread                # 使用 std::thread 时必须
)

###############################################################################
# ❼ 安装（可选）
###############################################################################
install(TARGETS map_node
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
